# Quantum-Error-Correction

./: CMakeLists.txt  README.md
include/: encoder_functions.h
src/: Makefile  encoder_functions.c  main.c
